--- a/index.html
+++ b/index.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BANGLADESH 2.0</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
     <!-- This is Navbar -->
-     <section id="navbar">
+    <section id="navbar">
         <div>
             <h1>Bangladesh 2.0</h1>
         </div>
         <div>
             <button id="border-btn">Sign In</button>
         </div>
-     </section>
+    </section>
+    <!-- banner -->
+    <section id="hero-section">
+        <div id="hero-left">
+            <p id="hero-name">Bangladesh 2.0</p>
+            <h1 id="hero-title">
+                Idea , innovation ,
+                vision and challenges in New Bangladesh.
+            </h1>
+            <button id="hero-btn">Explore New Bangladesh</button>
+        </div>
+        <div>
+           <img src="assets/hero.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
