--- a/index.html
+++ b/index.html
@@ -29,7 +29,49 @@
             <button id="hero-btn">Explore New Bangladesh</button>
         </div>
         <div>
-           <img src="assets/hero.png" alt="">
+            <img src="assets/hero.png" alt="">
+        </div>
+    </section>
+
+    <!-- missin section  -->
+    <section id="mission">
+        <h1>Bangladesh 2.0</h1>
+        <div id="mission-container">
+            <div class="mission-class">
+                <img src="assets/card-icon.png" alt="">
+                <h3>Innovation</h3>
+                <p>
+                    Bangladesh has seen significant innovations across various sectorsand a growing technology ecosystem
+                </p>
+
+            </div>
+            <div class="mission-class">
+                <img src="assets/card-icon.png" alt="">
+                <h3>Sustainability</h3>
+                <p>
+                    Sustainability refers to meeting the needs of the present without compromising the ability of future
+                    generations to meet their own needs
+                </p>
+
+            </div>
+            <div class="mission-class">
+                <img src="assets/card-icon.png" alt="">
+                <h3>Infrastructure</h3>
+                <p>
+                    Infrastructure refers to the fundamental physical and organizational systems and structures needed
+                    
+                </p>
+
+            </div>
+            <div class="mission-class">
+                <img src="assets/card-icon.png" alt="">
+                <h3>Empowerment</h3>
+                <p>
+                    Empowerment refers to the process of enabling individuals or groups to take control of their lives
+                   
+                </p>
+
+            </div>
         </div>
     </section>
 </body>
