--- a/index.html
+++ b/index.html
@@ -189,6 +189,55 @@
         </div>
 
 
+        <div class="news-card">
+            <img style="border-radius: 24px;" src="assets/satelite.png" alt="">
+            <div class="news-right">
+                <h2 class="news-title">Bangladesh Launches New Satellite</h2>
+                <div style="padding: 20px 0;">
+                    <img src="assets/al-jazeera.png" alt="">
+                    <p class="description">
+                        Date: 05/01/2025 <span style="padding-left: 10px;">Time: 10.25 PM</span>
+                    </p>
+                    <p style="padding: 10px 0;" class="description">
+                        Not until the creation and maintenance of decent conditions of life for all people are
+                        recognized
+                        and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized
+                    </p>
+                </div>
+                <button class="news-btn">Read More</button>
+            </div>
+
+        </div>
+
+
+    </section>
+
+    <!-- Donation Section -->
+    <section style="padding: 40px;">
+        <h1 style="text-align: center; " class="section-title">Donate Today</h1>
+        <p style="text-align: center; padding: 0 40px;" class="description">Bangladesh 2.0 aims to redefine the nation’s
+            trajectory by
+            embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives
+            in renewable energy, digital transformation, and robust infrastructure.</p>
+        <div class="donate-container">
+            <div class="hover-white">
+                <h1 class="section-title">100 Taka</h1>
+            </div>
+            <div class="hover-white">
+                <h1 class="section-title">200 Taka</h1>
+            </div>
+            <div class="hover-white">
+                <h1 class="section-title">500 Taka</h1>
+            </div>
+            <div class="hover-white">
+                <h1 class="section-title">1000 Taka</h1>
+            </div>
+        </div>
+        <div class="donater">
+            <input class="input-section description" type="text" placeholder="Other Amount (Taka)">
+            <button class="donate-btn">Donate Now</button>
+        </div>
     </section>
 </body>
 
